# kafka-example

./: Makefile  README.md  akhq-config.yaml  consumer.py  docker-compose.yaml  mypy.ini  producer.py  pyproject.toml
