[tool.poetry]
name = "kafka-example"
version = "0.1.0"
description = ""
authors = ["Manuel Šarić <manujelko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
