[tool.poetry]
name = "kafka-example"
version = "0.1.0"
description = ""
authors = ["Manuel Šarić <manujelko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.1.0"
aiokafka = "^0.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
